--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,14 +1,16 @@
 FROM python:3.10-slim
 
-# Set working dir inside the container
+# Set working directory inside the container
 WORKDIR /app
 
-# Install dependencies
+# Copy and install dependencies
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy everything into the container
-COPY ./app /app/app
+# ✅ Copy the *contents* of the app folder, not the folder itself
+COPY app ./app
 
-# Run uvicorn from inside the nested /app/app folder
-CMD ["uvicorn", "app.__main__:app", "--host", "0.0.0.0", "--port", "8000"]
+ENV PYTHONPATH=/app
+
+# ✅ Uvicorn runs from top-level /app and finds app.main
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
