--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,10 +7,10 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# ✅ Copy the *contents* of the app folder, not the folder itself
+# Copy the *contents* of the app folder, not the folder itself
 COPY app ./app
 
 ENV PYTHONPATH=/app
 
-# ✅ Uvicorn runs from top-level /app and finds app.main
+# Uvicorn runs from top-level /app and finds app.main
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
